tests/semantic/type_system6/type_system6.err
Error: Float constant (type mismatch) in file type_system6.dl at line 15
FloatConv(1.0).
----------^-----
Error: Ambiguous constant (unable to deduce type) in file type_system6.dl at line 16
FloatConv(1 + 1.0) :- true.
----------^-----------------
Error: Non-numeric argument for functor in file type_system6.dl at line 16
FloatConv(1 + 1.0) :- true.
----------^-----------------
Error: Non-numeric use for numeric functor in file type_system6.dl at line 16
FloatConv(1 + 1.0) :- true.
----------^-----------------
Error: Float constant (type mismatch) in file type_system6.dl at line 16
FloatConv(1 + 1.0) :- true.
--------------^-------------
Error: Non-numeric argument for functor in file type_system6.dl at line 16
FloatConv(1 + 1.0) :- true.
--------------^-------------
Error: Ambiguous constant (unable to deduce type) in file type_system6.dl at line 20
ToLargeForInt(2147483648).
--------------^------------
7 errors generated, evaluation aborted
